Adjust amp events pages and add GA

--- a/web/app/javascript/stylesheets/_variables.scss
+++ b/web/app/javascript/stylesheets/_variables.scss
@@ -7,17 +7,17 @@ $animation-time-large: 350ms;
 $animation-time-medium: 150ms;
 $animation-time-small: 100ms;
 
-$brand-color: #6369D1;
-$brand-color-aa: darken(#6369D1, 5%);
-$brand-color-aaa: darken(#6369D1, 10%);
+$brand-color: #3C43C5;
+$brand-color-aa: darken(#3C43C5, 5%);
+$brand-color-aaa: darken(#3C43C5, 10%);
 $brand-color-complementary: #993127;
 $brand-color-high-contrast: #0C0F0A;
 
 $border-color: #E1E1E1;
 
-$font-primary-family: 'Roboto', sans-serif;
-$font-secondary-family: 'Roboto', sans-serif;
-$font-title-family: 'Montserrat', sans-serif;
+$font-primary-family: Poppins;
+$font-secondary-family: Roboto, Arial;
+$font-title-family: Poppins;
 
 $section-padding-phone: 24px;
 
