--- a/web/app/javascript/packs/application-amp.scss
+++ b/web/app/javascript/packs/application-amp.scss
@@ -2,26 +2,6 @@
 @import '../stylesheets/mixins';
 @import '../stylesheets/template';
 
-/* latin */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-/* latin */
-@font-face {
-  font-family: 'Varela Round';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 
 .scrollToTop {
   color: $surface-color;
@@ -108,7 +88,7 @@ a {
   margin: auto;
 
   & h1.title {
-    font-family: "Varela Round", sans-serif;
+    font-family: $font-primary-family;
     text-align: left;
     margin: 0 0 6px 0;
     font-size: 26px;
@@ -166,7 +146,7 @@ a {
 
   & h1.title {
     font-family: $font-primary-family;
-    text-align: center;
+    text-align: left;
     margin: 24px 0 36px 0;
     font-size: 28px;
   }
