--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -36,6 +36,8 @@
 																									 user:           current_user,
 																									 title:          false,
 																									 id:             'movies-show',
+																									 history_action: 'replace',
+																									 target:         'selected-movie',
 																									 template:       'small' } %>
 	</div>
 <% end %>
