--- a/web/app/views/movies/_movies.html.erb
+++ b/web/app/views/movies/_movies.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag id, target: 'selected-movie' do %>
+<%= turbo_frame_tag id, target: target, class: 'inline-block w-full' do %>
 	<div class="select-none mx-auto max-w-screen-lg"
 			 data-controller="hovercard persist-horizontal-scroll slider"
 			 data-hovercard-active-value="<%= local_assigns.fetch(:hovercard, false) %>"
@@ -69,13 +69,14 @@
 				<div data-slider-target="scroller"
 						 data-persist-horizontal-scroll-target="scroller"
 						 class="py-2 rounded-lg md:px-2 md:py-2 scrollx">
-					<div data-controller="turbo" data-turbo-history-action-value="replace" class="<%= class_names('grid grid-flow-col px-5 md:px-0 w-content grid-after-margin', { 'gap-2.5': template == 'default', 'gap-1.5': template == 'small' }) %> ">
+					<div data-controller="turbo" data-turbo-history-action-value="<%= local_assigns[:history_action].presence %>" class="<%= class_names('grid grid-flow-col px-5 md:px-0 w-content grid-after-margin', { 'gap-2.5': template == 'default', 'gap-1.5': template == 'small' }) %> ">
 						<% movies.reverse.each do |movie| %>
 							<div data-slider-target="item"
 									 data-url="<%= hovercard_movie_path(movie) %>"
-									 data-action="mouseenter->hovercard#show mouseleave->hovercard#clearTimerShow"
+									 data-title="<%= "Hovercard: #{movie.title}" %>"
+									 data-action="click->hovercard#show mouseenter->hovercard#show mouseleave->hovercard#clearTimerShow"
 									 class="<%= class_names('flex flex-col transition-transform transform group md:hover:scale-105', { 'w-24': template == 'default', 'w-10 md:w-16': template == 'small' }) %>">
-								<%= link_to movie_path(movie), class: 'flex flex-col', data: { url: hovercard_movie_path(movie), action: 'click->turbo#stream click->hovercard#show', 'turbo-preserve-scroll': true } do %>
+								<%= link_to movie_path(movie), class: 'flex flex-col', data: { title: "Turbo: #{movie.title}", action: template == 'small' ? 'click->turbo#stream' : '', 'turbo-preserve-scroll': true } do %>
 									<% if movie.rating %>
 										<div class="<%= class_names('absolute flex font-semibold items-stretch left-0 space-x-0.5 text-white text-xs top-0 z-20', { 'py-0.5 px-1 w-10 md:w-16 rounded-md h-10': template == 'small', 'py-1 px-2 w-16 rounded-lg h-20': template == 'default' }) %> " style="background: radial-gradient(circle at 0% 0%,  #000000bf 20%,  transparent 50%);" title="votação de usuário do IMDB">
 											<span class="<%= class_names({ 'text-xxs': template == 'small' }) %>"><%= movie.rating %></span>
