Adjust title for calendar and categories pages

--- a/web/app/views/users/agenda.html.erb
+++ b/web/app/views/users/agenda.html.erb
@@ -1,3 +1,4 @@
+<% content_for :meta_title, 'Minha agenda' %>
 <% content_for :top_app_bar_title, 'Minha agenda' %>
 <% content_for :back_button, true %>
 
