--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for :canonical_url, 'https://alegreme.com/' %>
+<% content_for :meta_title, "Eventos na categoria #{@category&.details_display_name}" if params[:category] %>
 
 <%= render ModalComponent.new %>
 
