--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -91,7 +91,7 @@
 <%= render partial: 'components/bottom-navigation' if mobile_device? %>
 <%= render partial: 'layouts/footer', cached: true %>
 
-<% if current_page?(controller: 'feeds', action: 'index') %>
+<% if controller_name == 'feeds' && action_name == 'index' %>
 	<a href="https://forms.gle/hLgHtwEQGTwjpuDW9" target="_blank" class="md:w-content md:h-auto bg-white border bottom-16 fixed flex h-9 hover:border-brand-600 hover:text-brand-600 items-center md:bottom-5 md:left-5 px-2 py-1 right-3 rounded-full space-x-1.5 text-xs w-9 z-20" title="Envie sugestões de funcionalidades, erros e outras mensagens que desejar.">
 		<svg class="w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 			<path d="M0 0h24v24H0V0z" fill="none"/>
