--- a/web/app/views/movies/_movies.html.erb
+++ b/web/app/views/movies/_movies.html.erb
@@ -53,14 +53,14 @@
 					 class="relative">
 				<div class="relative" data-hovercard-target="card" data-action="mouseenter->hovercard#clearTimerHide mouseleave->hovercard#hide"></div>
 				<div class="hidden absolute top-0 left-0 z-20 items-center w-2 h-full select-none md:flex">
-					<div data-slider-target="left" data-action="click->slider#left mouseenter->hovercard#hide" class="<%= class_names('hidden my-auto -ml-5 rounded-full shadow-md transition-colors duration-200 cursor-pointer bg-brand-200 hover:bg-brand-600 hover:text-white text-brand-700', { 'mt-20': template == 'default', 'mt-8': template == 'small' }) %> ">
+					<div data-slider-target="left" data-action="click->slider#left mouseenter->hovercard#hide" class="<%= class_names('hidden my-auto -ml-5 rounded-full shadow-lg transition-colors duration-200 cursor-pointer bg-white border hover:bg-brand-200 hover:border-brand-200 text-brand-700', { 'mt-20': template == 'default', 'mt-8': template == 'small' }) %> ">
 						<svg xmlns="http://www.w3.org/2000/svg" class="p-2 w-10 h-10 fill-current" viewBox="0 0 20 20" fill="currentColor">
 							<path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"/>
 						</svg>
 					</div>
 				</div>
 				<div class="hidden absolute top-0 right-0 z-20 items-center w-3 h-full select-none md:flex">
-					<div data-slider-target="right" data-action="click->slider#right mouseenter->hovercard#hide" class="<%= class_names('my-auto -ml-2 rounded-full shadow-md transition-colors duration-200 cursor-pointer bg-brand-200 hover:bg-brand-600 hover:text-white text-brand-700', { 'mt-20': template == 'default', 'mt-8': template == 'small' }) %> ">
+					<div data-slider-target="right" data-action="click->slider#right mouseenter->hovercard#hide" class="<%= class_names('my-auto -ml-2 rounded-full shadow-lg transition-colors duration-200 cursor-pointer bg-white border hover:bg-brand-200 hover:border-brand-200 text-brand-700', { 'mt-20': template == 'default', 'mt-8': template == 'small' }) %> ">
 						<svg xmlns="http://www.w3.org/2000/svg" class="p-2 w-10 h-10 fill-current" viewBox="0 0 20 20" fill="currentColor">
 							<path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
 						</svg>
