--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -113,7 +113,7 @@
 			<div class="flex-grow">
 				<%= link_to place_path(@event&.place), class: 'inline items-center space-x-2', data: { 'turbo-preserve-scroll': true } do %>
 					<h2 class="inline c-h3">
-						<%= helpers.limit_place_name_size(@event.place_details_name, 40) %>
+						<%= helpers.limit_place_name_size(@event.place_name, 40) %>
 					</h2>
 				<% end %>
 				·
@@ -123,11 +123,11 @@
 					type:       'text'
 				)) %>
 				<div class="mt-2 text-sm leading-tight">
-					<%= helpers.limit_address_name_size @event.geographic['address'] %>
+					<%= helpers.limit_address_name_size @event.place_address %>
 				</div>
 			</div>
 			<div class="flex items-center h-12 align-middle bg-cover group" style="">
-				<%= link_to helpers.google_maps_url(@event.geographic['address']), class: 'flex group-hover:text-brand-600 h-content items-center justify-center md:justify-end md:mt-0 mt-3 text-brand-600 text-xs' do %>
+				<%= link_to helpers.google_maps_url(@event.place_address), class: 'flex group-hover:text-brand-600 h-content items-center justify-center md:justify-end md:mt-0 mt-3 text-brand-600 text-xs' do %>
 					<svg class="mr-1 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path d="M0 0h24v24H0z" fill="none"/>
 						<path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
