--- a/web/app/views/events/show.amp.erb
+++ b/web/app/views/events/show.amp.erb
@@ -17,10 +17,10 @@
   "url": "<%= event_path(@event, format: :html) %>",
   "location": {
     "@type": "Place",
-    "name": "<%= @event.place_details_name %>",
+    "name": "<%= @event.place_name %>",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "<%= @event.geographic['address'] %>",
+      "streetAddress": "<%= @event.place_address %>",
       "addressLocality": "<%= @event.geographic['city'] %>",
       "postalCode": "<%= @event.geographic['cep'] %>",
       "addressRegion": "RS",
@@ -67,10 +67,10 @@
         </i>
         <div>
           <div class="title">
-            <%= link_to limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), class: 'me-is-clickable' %>
+            <%= link_to limit_place_name_size(@event.place_name, 30), place_path(@event.place), class: 'me-is-clickable' %>
           </div>
           <span>
-            <%= limit_address_name_size @event.geographic['address'] %>
+            <%= limit_address_name_size @event.place_address %>
           </span>
         </div>
       <% end %>
