--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -39,7 +39,7 @@
 					</div>
 					<div class="mt-10 space-y-5">
 						<div class="text-xs leading-tight">
-							<b>Endereço: </b><%= @place.geographic_address&.titleize %>
+							<b>Endereço: </b><%= @place.address&.titleize %>
 						</div>
 						<!--						<div class="">-->
 						<!--							<%#= @upcoming_events.size %> eventos ativos-->
