--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -57,9 +57,6 @@
 }
 
 
-
-
-
 </script>
 
 <script type="application/ld+json">
@@ -103,8 +100,6 @@
 }
 
 
-
-
 </script>
 
 <%= render ModalComponent.new %>
@@ -128,42 +123,42 @@
 		<%= render(LargeEventComponent.new(event: @event, user: current_user)) %>
 	</div>
 	<div class="mt-5 md:col-span-3 md:mb-0 md:mt-28">
-		<% if will_happen? @event %>
-			<div class="flex hidden relative bottom-auto items-center p-3 space-y-2 w-auto text-sm text-gray-600 rounded-xl cursor-pointer md:block">
-				<a href="<%= @event.source_url %>" target="_blank" rel="nofollow noreferrer" class="inline-block flex justify-start items-center py-2 px-4 mr-3 mb-3 text-gray-600 bg-gray-100 rounded-full transition-all transition-colors transform cursor-pointer select-none group duration-50 group-hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 tap-highlight-none w-content">
-					<svg class="mr-3 h-5 text-gray-400 transition-colors stroke-current group-hover:text-brand-700" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
+		<div class="flex hidden relative bottom-auto items-center p-3 space-y-2 w-auto text-sm text-gray-600 rounded-xl cursor-pointer md:block">
+			<a href="<%= @event.source_url %>" target="_blank" rel="nofollow noreferrer" class="c-chip--active">
+				<svg class="mr-3 h-5 transition-colors stroke-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
+				</svg>
+				<div>Abrir página oficial</div>
+			</a>
+			<% if @event&.ticket_url %>
+				<a href="<%= @event.ticket_url %>" target="_blank" rel="nofollow noreferrer" class="c-chip--highlight">
+					<svg class="mr-3 h-5 transition-colors fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0 0h24v24H0V0z" fill="none"/>
+						<path d="M22 10V6c0-1.1-.9-2-2-2H4c-1.1 0-1.99.9-1.99 2v4c1.1 0 1.99.9 1.99 2s-.89 2-2 2v4c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2v-4c-1.1 0-2-.9-2-2s.9-2 2-2zm-2-1.46c-1.19.69-2 1.99-2 3.46s.81 2.77 2 3.46V18H4v-2.54c1.19-.69 2-1.99 2-3.46 0-1.48-.8-2.77-1.99-3.46L4 6h16v2.54zM9.07 16L12 14.12 14.93 16l-.89-3.36 2.69-2.2-3.47-.21L12 7l-1.27 3.22-3.47.21 2.69 2.2z"/>
 					</svg>
-					<div>Abrir página oficial</div>
+					<div>Comprar ingressos</div>
 				</a>
-				<% if @event&.ticket_url %>
-					<a href="<%= @event.ticket_url %>" target="_blank" rel="nofollow noreferrer" class="inline-block flex justify-start items-center py-2 px-4 mr-3 mb-3 text-gray-600 bg-gray-100 rounded-full transition-all transition-colors transform cursor-pointer select-none group duration-50 group-hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 tap-highlight-none w-content">
-						<svg class="mr-3 h-5 text-gray-400 transition-colors fill-current group-hover:text-brand-700" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M0 0h24v24H0V0z" fill="none"/>
-							<path d="M22 10V6c0-1.1-.9-2-2-2H4c-1.1 0-1.99.9-1.99 2v4c1.1 0 1.99.9 1.99 2s-.89 2-2 2v4c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2v-4c-1.1 0-2-.9-2-2s.9-2 2-2zm-2-1.46c-1.19.69-2 1.99-2 3.46s.81 2.77 2 3.46V18H4v-2.54c1.19-.69 2-1.99 2-3.46 0-1.48-.8-2.77-1.99-3.46L4 6h16v2.54zM9.07 16L12 14.12 14.93 16l-.89-3.36 2.69-2.2-3.47-.21L12 7l-1.27 3.22-3.47.21 2.69 2.2z"/>
-						</svg>
-						<div>Comprar ingressos</div>
-					</a>
-				<% end %>
-				<div class="inline-block flex justify-start items-center py-2 px-4 mr-3 mb-3 text-gray-600 bg-gray-100 rounded-full transition-all transition-colors transform cursor-pointer select-none group duration-50 group-hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 tap-highlight-none w-content"
-						 data-controller="share-button"
-						 data-share-button-text="<%= strip_tags(limit_description_size(@event.description, 160)) %>"
-						 data-share-button-title="<%= @event.name %>"
-						 data-share-button-url="<%= event_url(@event, format: :html) %>"
-						 data-action="click->share-button#share">
-					<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
-					<svg class="mr-3 h-4 text-gray-400 transition-colors fill-current group-hover:text-brand-700" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M15 14.08C14.24 14.08 13.56 14.38 13.04 14.85L5.91 10.7C5.96 10.47 6 10.24 6 10C6 9.76 5.96 9.53 5.91 9.3L12.96 5.19C13.5 5.69 14.21 6 15 6C16.66 6 18 4.66 18 3C18 1.34 16.66 0 15 0C13.34 0 12 1.34 12 3C12 3.24 12.04 3.47 12.09 3.7L5.04 7.81C4.5 7.31 3.79 7 3 7C1.34 7 0 8.34 0 10C0 11.66 1.34 13 3 13C3.79 13 4.5 12.69 5.04 12.19L12.16 16.35C12.11 16.56 12.08 16.78 12.08 17C12.08 18.61 13.39 19.92 15 19.92C16.61 19.92 17.92 18.61 17.92 17C17.92 15.39 16.61 14.08 15 14.08Z"/>
-					</svg>
-					<div>Compartilhar</div>
-				</div>
+			<% end %>
+			<div class="overflow-hidden c-chip--highlight"
+					 data-controller="share-button"
+					 data-share-button-text="<%= strip_tags(limit_description_size(@event.description, 160)) %>"
+					 data-share-button-title="<%= @event.name %>"
+					 data-share-button-url="<%= event_url(@event, format: :html) %>"
+					 data-action="click->share-button#share">
+				<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
+				<svg class="mr-3 w-4 transition-colors fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 308 308">
+					<defs/>
+					<path d="M227.904 176.981c-.6-.288-23.054-11.345-27.044-12.781-1.629-.585-3.374-1.156-5.23-1.156-3.032 0-5.579 1.511-7.563 4.479-2.243 3.334-9.033 11.271-11.131 13.642-.274.313-.648.687-.872.687-.201 0-3.676-1.431-4.728-1.888-24.087-10.463-42.37-35.624-44.877-39.867-.358-.61-.373-.887-.376-.887.088-.323.898-1.135 1.316-1.554 1.223-1.21 2.548-2.805 3.83-4.348.607-.731 1.215-1.463 1.812-2.153 1.86-2.164 2.688-3.844 3.648-5.79l.503-1.011c2.344-4.657.342-8.587-.305-9.856-.531-1.062-10.012-23.944-11.02-26.348-2.424-5.801-5.627-8.502-10.078-8.502-.413 0 0 0-1.732.073-2.109.089-13.594 1.601-18.672 4.802C90 87.918 80.89 98.74 80.89 117.772c0 17.129 10.87 33.302 15.537 39.453.116.155.329.47.638.922 17.873 26.102 40.154 45.446 62.741 54.469 21.745 8.686 32.042 9.69 37.896 9.69h.001c2.46 0 4.429-.193 6.166-.364l1.102-.105c7.512-.666 24.02-9.22 27.775-19.655 2.958-8.219 3.738-17.199 1.77-20.458-1.348-2.216-3.671-3.331-6.612-4.743z"/>
+					<path d="M156.734 0C73.318 0 5.454 67.354 5.454 150.143c0 26.777 7.166 52.988 20.741 75.928L.212 302.716c-.484 1.429-.124 3.009.933 4.085C1.908 307.58 2.943 308 4 308c.405 0 .813-.061 1.211-.188l79.92-25.396c21.87 11.685 46.588 17.853 71.604 17.853C240.143 300.27 308 232.923 308 150.143 308 67.354 240.143 0 156.734 0zm0 268.994c-23.539 0-46.338-6.797-65.936-19.657-.659-.433-1.424-.655-2.194-.655-.407 0-.815.062-1.212.188l-40.035 12.726 12.924-38.129c.418-1.234.209-2.595-.561-3.647-14.924-20.392-22.813-44.485-22.813-69.677 0-65.543 53.754-118.867 119.826-118.867 66.064 0 119.812 53.324 119.812 118.867.001 65.535-53.746 118.851-119.811 118.851z"/>
+				</svg>
+				<div>Compartilhar</div>
 			</div>
-		<% end %>
+		</div>
 
-		<div class="border-t border-gray-100 md:border-0 inline-block p-5 py-8 space-y-3">
-			<h2 class="c-h3">Organizadores</h2>
+		<div class="inline-block p-5 py-8 space-y-3 border-t border-gray-100 md:border-0">
+			<h2 class="c-h3 uppercase">Organizadores</h2>
 			<% @event.organizers.each do |organizer| %>
-				<%= link_to organizer_path(organizer), class: 'flex items-center space-x-3' do %>
+				<%= link_to organizer_path(organizer), class: 'flex items-center space-x-3 hover:text-brand-600' do %>
 					<%= image_tag organizer.image[:sm].try { |image| image.url(public: true) },
 												loading: :lazy,
 												alt:     organizer.details_name,
@@ -182,7 +177,7 @@
 			<% end %>
 		</div>
 
-		<div class="border-t border-b border-gray-100 md:border-0 py-8 space-y-3">
+		<div class="py-8 space-y-3 border-t border-b border-gray-100 md:border-0">
 			<%= render partial: 'events/similar_events', locals: { event: @event, similar_events: @similar_events, src: similar_event_path, loading: 'lazy' } %>
 		</div>
 
@@ -195,7 +190,7 @@
 					Ver todos os eventos da categoria <%= @event&.categories_display_name&.underscore %> em Porto Alegre
 				</div>
 			</div>
-			<svg xmlns="http://www.w3.org/2000/svg" class="w-6 stroke-current flex-shrink-0" fill="none" viewBox="0 0 24 24">
+			<svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 w-6 stroke-current" fill="none" viewBox="0 0 24 24">
 				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
 			</svg>
 		<% end %>
