--- a/web/app/views/movies/hovercard.html.erb
+++ b/web/app/views/movies/hovercard.html.erb
@@ -6,7 +6,7 @@
 	</div>
 	<div class="flex flex-col md:flex-row">
 		<% if @movie.trailer %>
-			<div class="h-48 md:w-64 md:h-36 w-full my-3 md:my-0">
+			<div class="bg-gray-200 rounded overflow-hidden h-48 md:w-64 md:h-36 w-full my-3 md:my-0">
 				<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="100%" height="100%" type="text/html" allow="autoplay" src="<%= @movie&.trailer&.gsub('watch?v=', 'embed/') %>?autoplay=1&fs=0&showinfo=0&rel=0&cc_load_policy=0&start=20&end=0">
 				</iframe>
 			</div>
