--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -113,7 +113,7 @@
 	<% end %>
 	<div class="md:col-span-3 flex-shrink-0">
 		<div class="flex h-full items-center justify-end">
-			<% if current_user && !current_page?(controller: 'search', action: 'index') %>
+			<% if current_user && controller_name == 'feeds' && action_name == 'index' %>
 				<%= link_to profile_path(current_user), class: 'c-chip border-0 md:border p-0 md:p-2' do %>
 					<% if current_user&.picture %>
 						<%= image_tag(current_user.picture, { class: "w-7 h-7 border rounded-full", alt: current_user&.name, onerror: "this.style.opacity='0'" }) rescue nil %>
@@ -124,8 +124,15 @@
 						<%= truncate(current_user&.name, length: 15) %>
 					</div>
 				<% end %>
-			<% end %>
-			<% unless current_user %>
+			<% else %>
+				<% if controller_name == 'events' && action_name == 'show' %>
+					<a href="<%= search_index_path %>" class="md:hidden" aria-label="Buscar">
+						<svg class="w-6 h-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<path fill="none" d="M0 0h24v24H0V0z"/>
+							<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+						</svg>
+					</a>
+				<% end %>
 				<%= link_to 'Entrar', new_user_session_path, class: 'hidden md:inline-block hover:text-brand-600 px-6 text-gray-800 text-sm' %>
 				<%= link_to 'Criar conta',
 										new_user_registration_path,
