--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -62,6 +62,17 @@
 </noscript>
 <!-- End Google Tag Manager (noscript) -->
 
+<% if !current_user && controller_name == 'events' && action_name == 'show' %>
+	<div class="md:hidden bg-brand-600 flex items-center justify-center px-5 py-3 space-x-2 text-center text-white text-xs">
+		<a href="<%= new_user_registration_path %>" class="font-bold leading-tight px-1">Crie uma conta</a>
+		<span class="">ou</span>
+		<a aria-label="Baixar aplicativo para android" target="_blank" class="font-bold  leading-tight px-1" href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+			instale o aplicativo para android
+		</a>
+	</div>
+<% end %>
+
+
 <div class="c-header md:sticky md:top-0 w-full mx-auto transition-transform duration-100 transform bg-white md:py-2 z-50 <%= class_names('sticky top-0': content_for?(:top_app_bar_title)) %>"
 		 data-controller="head"
 		 data-reflex-permanent
